# columnar

./: .gitignore  Cargo.toml  README.md  architecture.md
.idx/: dev.nix
columnar-adbc/: Cargo.toml  INTEROPERABILITY.md  README.md
columnar-adbc/src/: lib.rs
columnar-arrow/: Cargo.toml  README.md
columnar-arrow/src/: buffer.rs  int64.rs  lib.rs  utf8.rs
columnar-cli/: Cargo.toml  README.md
columnar-cli/src/: main.rs
columnar-dfusion/: Cargo.toml  README.md
columnar-dfusion/src/: lib.rs
columnar-flight/: Cargo.toml  README.md
columnar-flight/src/: lib.rs
columnar-flight/tests/go-flight-sql-client/: go.mod  go.sum  main.go
columnar-format/: Cargo.toml  README.md
columnar-format/src/: align.rs  directory.rs  error.rs  header.rs  lib.rs  reader.rs  stats.rs  types.rs  writer.rs
columnar-format/tests/: arrow_roundtrip.rs  file_writer_integration.rs
columnar-mmap/: Cargo.toml  README.md
columnar-mmap/src/: lib.rs
