[package]
name = "columnar-adbc"
description = "ADBC driver interfaces for Columnar"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = "54.3.1"
arrow-flight = { version = "54.3.1", features = ["flight-sql-experimental"] }
arrow-schema = "54.3.1"
datafusion = "46.0.1"
futures = "0.3.32"
tonic = { version = "0.12.3", features = ["transport"] }

[dev-dependencies]
columnar-flight = { path = "../columnar-flight" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
