[package]
name = "columnar-flight"
description = "Apache Arrow Flight server for Columnar"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = "54.3.1"
arrow-flight = { version = "54.3.1", features = ["flight-sql-experimental"] }
arrow-ipc = "54.3.1"
arrow-schema = "54.3.1"
async-trait = "0.1.89"
bytes = "1.11.1"
datafusion = "46.0.1"
futures = "0.3.32"
prost = "0.13.5"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["transport"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
