[package]
name = "columnar-format"
description = "Columnar file format definitions and layout structures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
arrow-array = "54.3.1"
columnar-arrow = { path = "../columnar-arrow" }
columnar-mmap = { path = "../columnar-mmap" }
